--- a/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
+++ b/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.assert" Version="2.3.1" />
+    <PackageReference Include="xunit.core" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
