--- a/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
+++ b/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
@@ -2,11 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Authors>Ihnat Klimchuk</Authors>
+    <PackageId>PixelBattles.Fluently</PackageId>
+    <Company>PixelBattles</Company>
+    <Product>Fluently</Product>
+    <AssemblyVersion>0.0.0.1</AssemblyVersion>
+    <FileVersion>0.0.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="xunit.assert" Version="2.3.1" />
-    <PackageReference Include="xunit.core" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
