--- a/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
+++ b/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
@@ -2,17 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Ihnat Klimchuk</Authors>
     <PackageId>PixelBattles.Fluently</PackageId>
     <Company>PixelBattles</Company>
     <Product>Fluently</Product>
-    <AssemblyVersion>0.0.0.1</AssemblyVersion>
+    <AssemblyVersion>0.0.0.2</AssemblyVersion>
     <FileVersion>0.0.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
     <PackageReference Include="xunit.assert" Version="2.3.1" />
   </ItemGroup>
 
