--- a/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
+++ b/src/PixelBattles.Fluently/PixelBattles.Fluently.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>0.0.3</Version>
+    <Version>0.0.4-alpha</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Ihnat Klimchuk</Authors>
     <PackageId>PixelBattles.Fluently</PackageId>
     <Company>PixelBattles</Company>
     <Product>Fluently</Product>
-    <AssemblyVersion>0.0.0.3</AssemblyVersion>
-    <FileVersion>0.0.0.3</FileVersion>
+    <AssemblyVersion>0.0.0.4</AssemblyVersion>
+    <FileVersion>0.0.0.4</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
